--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="br.com.lopes.danielebonilha">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.dbonilha.movieapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -32,15 +33,14 @@
 
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="br.com.lopes.danielebonilha.MainActivity"
+                android:value="com.dbonilha.movieapp.MainActivity"
                 />
         </activity>
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges=
                 "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
-            android:label="@string/app_name" />
+            android:label="@string/app_name"/>
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id"/>
